--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CodeLeap Challenge</title>
+    <link
+      rel="shortcut icon"
+      href="/src/assets/favicon-32x32.png"
+      type="image/x-icon"
+    />
+    <style>
+      #root {
+        overflow-x: hidden;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
